fixed courwork wrapper alignment on larger devices

--- a/style/about.css
+++ b/style/about.css
@@ -421,10 +421,10 @@ body {
 .coursework_container {
     background-color: black;
     width: 100%;
-    height: 220px;
+    height: auto;
     box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5); 
     transition: box-shadow 0.3s, transform 0.3s;
-    display: flex; 
+    display: flex;
     flex-wrap: wrap; 
     border-radius: 30px;
     animation: fadeInText 5s ease forwards;
@@ -433,7 +433,6 @@ body {
     .coursework_container {
         flex-direction: column; 
         width: 90%; 
-        height: auto; 
         margin-top: 10%;
         display: grid;
         justify-items: center;
@@ -448,13 +447,18 @@ body {
         align-items: center;
         margin-left: 10%;
         margin-right: 10%;
+        margin-top: 10%;
+        padding-top: 2.25%;
+        padding-bottom: .5%;
     }
 }
 
 .softSkillsContent_wrapper {
     margin-top: -8%;
 }
-
+.courseworkContent_wrapper {
+    margin-top: -5%;
+}
 
 /*  *********************** Tab Wrapper *********************** */
 .tab_wrapper {
@@ -532,7 +536,6 @@ body {
 
 /*  *********************** Coursework Tab *********************** */
 .coursework_tab {
-    padding: 0px;
     text-align: center;
     justify-content: center;
     border: 3px solid black;
@@ -558,7 +561,7 @@ body {
         width: 270px;
         height: auto;
         margin-left: 50%;
-        margin-top: -23.4%;
+        margin-top: 0%;
     }
 }
 @keyframes fadeInText {
